# holo

./: .gitignore  LICENSE  README.md  __init__.py  __typing.py  calc.py  cipher.py  correlation.py  dummys.py  export.py  ffmpeg_utils.py  files.py  generatePyi.py  jitter.py  linkedObjects.py  loading.py  logger.py  maths.py  noise.py  notify.py  parallel.py  plot.py  pointers.py  preprocessor.py  prettyFormats.py  profilers.py  protocols.py  pyproject.toml  pyx_reader.pxd  pyx_reader.pyi  pyx_reader.pyx  ramDiskSave.py  rand.py  reader.py  requirements.txt  setup.py  simpleDate.py  tailCall.py  treeStrcutures.py  types_ext.py  (+2 more)
holo/: __init__.py  __typing.py  calc.py  cipher.py  containers.py  correlation.py  customLanguage.py  dummys.py  export.py  ffmpeg_utils.py  files.py  formulas.py  generatePyi.py  gradientDescente.py  jitter.py  linkedObjects.py  loading.py  logger.py  maths.py  parallel.py  plot.py  pointers.py  prettyFormats.py  profilers.py  protocols.py  pyx_datatypes.pxd  pyx_datatypes.pyx  pyx_reader.pxd  pyx_reader.pyi  pyx_reader.pyx  ramDiskSave.py  rand.py  reader.py  simpleDate.py  tailCall.py  treeStrcutures.py  types_ext.py  wrappers.py
