[project]
name = "holo"
version = "0.1.1"
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Ludovic Andrieu", email = "vuvu700.vuvu@gmail.com" }
]
dependencies = [
    "numpy",
    "numba",
    "matplotlib",
    "typing_extensions",
    "requests",
    "mypy",
    "multiprocess",
    "ffmpeg-python"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/vuvu700/holo"

[tool.setuptools.packages.find]
where = ["."]